# review-gremlin

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  experiments.ipynb  pyproject.toml  requirements.txt
app/: chroma_client.py  comments.py  init_db.py  instagram_comments.py  main.py  mongo_client.py  telegram_client.py  telegram_crawler.py
chromadb/: chroma.sqlite3
frontend/: Dockerfile  index.html  script.js
notebooks/: Untitled.ipynb  experiments.ipynb  hyde.ipynb  simple.ipynb  telegram_adaptive_rag.ipynb  telegram_crawler.ipynb  telegram_hyde_rag.ipynb  telegram_hype_rag.ipynb  telegram_rag_with_feedback.ipynb  telegram_simple_rag.ipynb
tests/: test_main.py
