[project]
name = "ai-pr-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "fastapi>=0.115.12",
    "hf-xet>=1.0.3",
    "langchain>=0.3.23",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.21",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.3.2",
    "motor>=3.7.0",
    "pymongo>=4.12.0",
    "sentence-transformers>=4.1.0",
    "torch>=2.6.0",
    "uvicorn>=0.34.2",
    "python-dotenv>=1.0.0", # Added for loading .env variables
    "telethon>=1.34.0" # Using Telethon for user account interaction
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
